done some model work, added query all button route for easy query of all database users

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Passport Local Mongoose Login Example
+    title Calender
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/custom.css')
     block scripts
@@ -19,6 +19,8 @@ html
                 a(href="/register") Register
               li
                 a(href="/login") Log In
+              li
+                a(href="/query") Query Users
             else
               li
                 a(href="/logout") Log Out
