--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,6 @@ extends layout
 
 block content
   if (user)
-    p You are currently logged in as #{user.username}
+    p You are currently logged in as #{user.name}
   else
     p You are currently not logged in. Plaese login or register...
