--- a/views/register.jade
+++ b/views/register.jade
@@ -7,12 +7,11 @@ block content
     br
     form(role='form', action="/register",method="post", style='max-width: 300px;')
       .form-group
-          input.form-control(type='text', name="username", placeholder='Username')
+          input.form-control(type='text', name="name", placeholder='John Doe')
       .form-group
           input.form-control(type='text', name="email", placeholder='Enter Email')
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
       button.btn.btn-default(type='submit') Submit
-      &nbsp;
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
