--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,11 @@ doctype html
 html
   head
     title Calender
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/custom.css')
+    link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/custom.css')
     block scripts
-      script(src='/javascripts/jquery.min.js')
-      script(src='/javascripts/bootstrap.min.js')
+      script(src='/js/jquery.min.js')
+      script(src='/js/bootstrap.min.js')
   body
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
