added calRoutes and did a lot of fiddling/testing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,10 @@ html
             else
               li
                 a(href="/logout") Log Out
+              li
+                a(href="/usergroup") execQuery        
+              li
+                a(href="/createGroup") create group        
 
     .container
       block content
