wrote 4 routes and learned shit

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,9 @@ html
               li
                 a(href="/usergroup") execQuery        
               li
-                a(href="/createGroup") create group        
+                a(href="/createGroup") create group      
+              li
+                a(href="/query") Query Users  
 
     .container
       block content
