--- a/views/index.jade
+++ b/views/index.jade
@@ -1,64 +1,85 @@
 extends layout
 
 block content
-  if (user)
-    p You are currently logged in as #{user.name}
-  else
-    p You are currently not logged in. Plaese login or register...
-  br
-
-  link(rel='stylesheet', href='/css/calendar.min.css')
-
-  br
-  body
-    .page-header
-      .pull-right.form-inline
-        .btn-group
-          button.btn.btn-primary(onclick="navigate('prev');") << Prev
-          button.btn(onclick="navigate('today');") Today
-          button.btn.btn-primary(onclick="navigate('next');") Next >>
-        .btn-group#viewLengthButtons
-          button.btn.btn-warning(onclick="setViewLength('year');") Year
-          button.btn.btn-warning.active(onclick="setViewLength('month');") Month
-          button.btn.btn-warning(onclick="setViewLength('week');") Week
-          button.btn.btn-warning(onclick="setViewLength('day');") Day
-      h3
-      br
-    .row
-      #calendar
+  div
+    if (user)
+      p You are currently logged in as #{user.name}
+    else
+      p You are currently not logged in. Plaese login or register...
     br
-    p#eventFrame
-    script(type='text/javascript', src='/js/underscore-min.js')
-    script(type='text/javascript', src='/js/calendar.min.js')
-    script(type='text/javascript', src='/js/angular.min.js')
-    script(type='text/javascript').
-      var calendar = $("#calendar").calendar(
-      {
-        view: "month",
-        tmpl_path: "/tmpls/",
-        events_source: function () { return [
-          {
-            "id": 293,
-            "title": "Event 1",
-            "url": "javascript:void(0)",
-            "class": "event-important",
-            "start": 1422424903780, // Milliseconds
-            "end": 1422434903780 // Milliseconds
+
+    link(rel='stylesheet', href='/css/calendar.min.css')
+
+    br
+    body(ng-app="calendarApp")
+      .page-header
+        .pull-right.form-inline
+          .btn-group
+            button.btn.btn-primary(onclick="navigate('prev');") << Prev
+            button.btn(onclick="navigate('today');") Today
+            button.btn.btn-primary(onclick="navigate('next');") Next >>
+          .btn-group#viewLengthButtons
+            button.btn.btn-warning(calendarView="year", onclick="setViewLength('year');") Year
+            button.btn.btn-warning.active(calendarView="month", onclick="setViewLength('month');") Month
+            button.btn.btn-warning(calendarView="week", onclick="setViewLength('week');") Week
+            button.btn.btn-warning(calendarView="day", onclick="setViewLength('day');") Day
+        h3
+        br
+      .row
+        .span9
+          #calendar
+        .span3
+          #sideBar
+            h3 {{ sideBar.title }}
+            {{ sideBar.text }}
+      br
+      p#eventFrame
+      script(type='text/javascript', src='/js/underscore-min.js')
+      script(type='text/javascript', src='/js/calendar.min.js')
+      script(type='text/javascript', src='/js/angular.min.js')
+      script(type='text/javascript').
+        var calendar = $("#calendar").calendar(
+        {
+          view: "month",
+          tmpl_path: "/tmpls/",
+          events_source: function () { return [
+            {
+              "id": 293,
+              "title": "Event 1",
+              "url": "javascript:void(0)",
+              "class": "event-important",
+              "start": 1422424903780, // Milliseconds
+              "end": 1422434903780 // Milliseconds
+            }
+            ];},
+          onAfterViewLoad: function(view) {
+            $('.btn-group button').removeClass('active');
+            $('button[calendarView="' + view + '"]').addClass('active');
+            $('.page-header h3').text(this.getTitle());
+
+            $('a[data-event-id]').click(function() {
+              $('#eventFrame').text($(this).attr("data-event-id"));
+            });
           }
-          ];},
-        onAfterViewLoad: function(view) {
-          $('.page-header h3').text(this.getTitle());
-        },
-        onAfterEventsLoad: function(events) {
-          $("a[data-event-id='293']").attr("onclick","$('.p#eventFrame').attr('value',$(this).attr('data-original-title'));");
+        });
+        function setViewLength(viewLength) {
+          calendar.view(viewLength);
         }
-      });
-      function setViewLength(viewLength) {
-        calendar.view(viewLength);
-      }
-      function navigate(where) {
-        calendar.navigate(where);
-      }
-      $(".btn-group#viewLengthButtons > .btn").click(function(){
-        $(this).addClass("active").siblings().removeClass("active");
-      });
+        function navigate(where) {
+          calendar.navigate(where);
+        }
+
+        //Angular code
+        var app = angular.module('calendarApp', []);
+        app.run(function($rootScope, $http) {
+          $rootScope.sideBar = {title: "User Groups", text: "N/A"};
+
+          $http.get('/usergroup').
+          success(function(data, status, headers, config) {
+            $rootScope.sideBar.text = data;
+          }).
+          error(function(data, status, headers, config) {
+            // called asynchronously if an error occurs
+            // or server returns response with an error status.
+          });
+        });
