small adjustments to make original stuff work after the new organization

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,7 @@ html
               li
                 a(href="/usergroup") execQuery        
               li
-                a(href="/createGroup") create group      
+                a(href="/usergroup/createGroup") create group      
               li
                 a(href="/query") Query Users  
 
