Refactoring index.jade to not include any javascript directly.

--- a/views/index.jade
+++ b/views/index.jade
@@ -83,94 +83,6 @@ block content
     script(type='text/javascript', src='/js/underscore-min.js')
     script(type='text/javascript', src='/js/calendar.min.js')
     script(type='text/javascript', src='/js/angular.js')
-    script(type='text/javascript').
-      var calendar = $("#calendar").calendar(
-      {
-        view: "month",
-        tmpl_path: "/tmpls/",
-        events_source: function () { return [
-          {
-            "id": 293,
-            "title": "Event 1",
-            "url": "javascript:void(0)",
-            "class": "event-important",
-            "start": 1422424903780, // Milliseconds
-            "end": 1422434903780 // Milliseconds
-          }
-          ];},
-        onAfterViewLoad: function(view) {
-          $('.btn-group button').removeClass('active');
-          $('button[calendarView="' + view + '"]').addClass('active');
-          $('.page-header h3').text(this.getTitle());
-
-          $('a[data-event-id]').click(function() {
-            $('#eventFrame').text($(this).attr('data-event-id'));
-          });
-        }
-      });
-      function setViewLength(viewLength) {
-        calendar.view(viewLength);
-      }
-      function navigate(where) {
-        calendar.navigate(where);
-      }
-
-      //Angular code
-      var app = angular.module('calendarApp', []);
-      app.run(function($rootScope, $http) {
-        $rootScope.things="text";
-      });
-      app.controller('sideBarController', function($scope, $http) {
-        $scope.title = 'Select an Option';
-        $scope.text = 'N/A';
-        $scope.selector = -1;
-
-        $scope.displayUserGroups = function() {
-          $scope.title = 'User Groups';
-          $scope.text = 'N/A';
-          $scope.selector = 0;
-
-          $http.get('/usergroup').
-          success(function(data, status, headers, config) {
-            $scope.text = angular.fromJson(data);
-            //Parse the object into a set of groups filled with users
-          }).
-          error(function(data, status, headers, config) {
-            // called asynchronously if an error occurs
-            // or server returns response with an error status.
-          });
-        }
-
-        $scope.displayCalendarInfo = function() {
-          $scope.title = 'Calendar Information';
-          $scope.text = 'N/A';
-          $scope.selector = 2;
-
-          $http.get('/calendars').
-          success(function(data, status, headers, config) {
-            $scope.text = angular.fromJson(data);
-            //Parse the object into a set of groups filled with users
-          }).
-          error(function(data, status, headers, config) {
-            // called asynchronously if an error occurs
-            // or server returns response with an error status.
-          });
-        }
-      });
-      app.controller('bottomAreaController', function($scope, $http) {
-        $scope.title = '';
-        $scope.text = 'FFFAAAAACKING';
-        $scope.selector = 1;
-
-        $scope.sendEventData = function(postData) {
-          $http.post('/events', postData).
-          success(function(data, status, headers, config) {
-            $scope.text = angular.fromJson(data);
-            //Parse the object into a set of groups filled with users
-          }).
-          error(function(data, status, headers, config) {
-            // called asynchronously if an error occurs
-            // or server returns response with an error status.
-          });
-        }
-      });
+    script(type='text/javascript', src='/js/index.js')
+    script(type='text/javascript', src='/js/bottomAreaController.js')
+    script(type='text/javascript', src='/js/sideBarController.js')
