--- a/views/index.jade
+++ b/views/index.jade
@@ -28,7 +28,6 @@ block content
     .row
       .span9
         #calendar
-      //
       .span3
         #sideBar(ng-controller="sideBarController")
           .btn-group
@@ -38,18 +37,18 @@ block content
           #userGroupWindow(ng-hide="selector != 0")
             ul
               li(ng-repeat="group in userGroups")
-                [<a href ng-click="displayUserGroup(group.name)">group.name</a>]
+                a(href, ng-click="displayUserGroup(group.name)") {{ group.name }}
           #userListWindow(ng-hide="selector != 1")
             ul
-              li(ng-repeat="user in group")
+              li(ng-repeat="user in selectedUserGroup")
                 user.name
           #calendarInfo(ng-hide="selector != 2")
             {{ text }}
-    //
     br
     .span9
       #bottomBar(ng-controller="bottomAreaController")
         #displayEvent(ng-hide="selector != 0")
+          |Event Details
         #createEvent(ng-hide="selector != 1")
           form(name="eventForm")
             |Event Name
@@ -66,11 +65,11 @@ block content
             br
             |Start Time
             br
-            input(type="datetime-local", ng-model="calendar.start", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00", required)
+            input(type="datetime-local", ng-model="selectedEvent.start", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00", required)
             br
             |End Time
             br
-            input(type="datetime-local", ng-model="calendar.end", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00", required)
+            input(type="datetime-local", ng-model="selectedEvent.end", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00", required)
             br
             |Containing Calendar
             br
