--- a/views/index.jade
+++ b/views/index.jade
@@ -50,6 +50,7 @@ block content
             form(name="addUserForm")
               input(type="text", ng-model="inputUser", required)
               button.btn.btn-primary(ng-disabled="addUserForm.$invalid", ng-click="addUserToGroup(inputUser)") Add User
+              {{ text }}
 
           #calendarInfo(ng-hide="selector != 2")
             ul
