--- a/views/index.jade
+++ b/views/index.jade
@@ -53,9 +53,18 @@ block content
               {{ text }}
 
           #calendarInfo(ng-hide="selector != 2")
+            |Modify
             ul
-              li(ng-repeat="calendar in calendars")
-                a(href, ng-click="displayCalendar()") {{ calendar.name }}
+              li(ng-repeat="calendar in modCalendars")
+                a(href, ng-click="displayCalendar(calendar)") {{ calendar._id }}
+            |See All
+            ul
+              li(ng-repeat="calendar in viewCalendars")
+                a(href, ng-click="displayCalendar(calendar)") {{ calendar._id }}
+            |Busy Only
+            ul
+              li(ng-repeat="calendar in viewBusyCalendars")
+                a(href, ng-click="displayCalendar(calendar)") {{ calendar._id }}
             form(name="createCalendarForm")
               input(type="text", ng-model="inputCalendarName", required)
               button.btn.btn-primary(ng-disabled="createCalendarForm.$invalid", ng-click="createCalendar(inputCalendarName)") Create Calendar
