Jade index changes

--- a/views/index.jade
+++ b/views/index.jade
@@ -81,9 +81,11 @@ block content
             ul
               li(ng-repeat="rule in selectedCalendar.rules")
                 {{ rule.ruleType.type }}
+            br
+            b Users with Modify:
             ul
               li(ng-repeat="modUser in selectedCalendar.modList")
-                {{ rule.ruleType.type }}
+                {{ modUser.name }}
     br
     .span9
       #bottomBar(ng-controller="bottomAreaController")
