--- a/views/index.jade
+++ b/views/index.jade
@@ -90,34 +90,41 @@ block content
                 {{ modUser.name }}
 
           #calendarEvents(ng-show="selector == 4")
-            |Events
             ul
               li(ng-repeat="event in localEvents")
-                a(href ng-click="displayEventDetails(event)") {{ event.name }}
+                a(href ng-click="displayEventDetails(event)") {{ event.title }}
+            button.btn.btn-primary(ng-click="displayEventCreator()") Create Event
     br
     .span9
       #bottomBar(ng-controller="bottomAreaController")
         #displayEvent(ng-show="bottomSelector == 0")
-          h3 {{ selectedEvent.name }}
-          h1 Description
-          p {{ selectedEvent.details }}
-          h1 At
-          p {{ selectedEvent.location }}
-          h1 From
+          h2 {{ selectedEvent.name }}
+          h4 Description
+          p(ng-show="selectedEvent.details") {{ selectedEvent.details }}
+          p(ng-hide="selectedEvent.details") No description.
+          h4 At
+          p(ng-show="selectedEvent.location") {{ selectedEvent.location }}
+          p(ng-hide="selectedEvent.location") No location.
+          h4 From
           p {{ selectedEvent.start }}
-          h1 To
+          h4 To
           p {{ selectedEvent.end }}
-          div(ng-show="selectedEvent.alerts")
-            h1 Alerts
+          div(ng-hide="selectedEvent.alerts == null")
+            h4 Alerts
             ul
               li(ng-repeat="alert in selectedEvent.alerts") {{ alert }}
-          h1 Repeats?
-          p {{ selectedEvent.willRepeat }}
-            div(ng-show="selectedEvent.willRepeat")
-              p(ng-show="eventDetails.repeatMode == 'Number'") Repeats for {{ eventDetails.repeatCount }} iterations.
-              p(ng-show="eventDetails.repeatMode == 'End Date'") Repeats until {{ eventDetails.repeatUntil }}.
-          h1 Calendar
-          p {{ selectedEvent.calendar.name }}
+          div(ng-hide="selectedEvent.willRepeat == null")
+            h4 Repeats?
+            p {{ selectedEvent.willRepeat }}
+              div(ng-show="selectedEvent.willRepeat")
+                p(ng-show="eventDetails.repeatMode == 'Number'") Repeats for {{ eventDetails.repeatCount }} iterations.
+                p(ng-show="eventDetails.repeatMode == 'End Date'") Repeats until {{ eventDetails.repeatUntil }}.
+          //
+            h4 Calendar
+            p {{ selectedEvent.calendar.name }}
+          .btn-group
+            button.btn.btn-primary(ng-click="editSelectedEvent()") Edit Event
+            button.btn.btn-warning(ng-click="deleteSelectedEvent()") Delete Event
 
         #createEvent(ng-show="bottomSelector == 1")
           form(name="eventForm")
@@ -164,6 +171,7 @@ block content
             label Containing Calendar
             select(ng-model="eventDetails.calendar", ng-options="calendar.name group by calendar.grouping for calendar in calendars | filter:{grouping: '!Busy Calendar'} | filter:{grouping: '!Viewable Calendar'}", required)
             br
+            input(type="text", ng-model="selectedEvent._id", ng-hide="true")
             btn.btn.btn-primary(ng-disabled="eventForm.$invalid", ng-click="sendEventData()") Save
             br
           br
