--- a/views/index.jade
+++ b/views/index.jade
@@ -56,7 +56,7 @@ block content
           #calendarInfo(ng-show="selector == 2")
             ul
               li(ng-repeat="calendar in myCalendars")
-                a(href, ng-click="displayCalendar(calendar)") {{ calendar.name }}
+                a(href, ng-click="displayOwnerCalendar(calendar)") {{ calendar.name }}
                 a(href, ng-click="deleteCalendar(calendar._id)") [X]
             b Modify
             ul
@@ -77,7 +77,7 @@ block content
 
           #calendarDetailsWindow(ng-hide="selector != 3")
             b Owner: 
-            |{{ selectedCalendar.owner }}
+            |{{ selectedCalendar.owner.name }}
             br
             b Rules:
             ul
