PLAESE -> PLEASE FINALLY

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     if (user)
       p You are currently logged in as #{user.name}
     else
-      p You are currently not logged in. Plaese login or register...
+      p You are currently not logged in. Please login or register...
     br
 
     link(rel='stylesheet', href='/css/calendar.min.css')
