--- a/views/index.jade
+++ b/views/index.jade
@@ -93,7 +93,7 @@ block content
             ul
               li(ng-repeat="rule in selectedCalendar.rules")
                 {{ rule.ruleType.type + " " }}
-                a(href, ng-click="deleteRule(calendar._id)") [X]
+                a(href, ng-click="deleteRule(rule._id)") [X]
             br
             b Users with Modify: 
             ul
@@ -106,22 +106,28 @@ block content
               li(ng-repeat="event in localEvents | filter: selectedCalendar._id")
                 a(href ng-click="displayEventDetails(event)") {{ event.title }}
             form(name="addRuleForm")
-              input(type="radio", name="rules", value="canView", ng-model="ruleType")
-              | Can View
-              br
-              input(type="radio", name="rules", value="canViewBusy", ng-model="ruleType")
-              | Can View Busy
-              br
-              input(type="radio", name="rules", value="canNotView", ng-model="ruleType")
-              | Cannot View
-              br
-              br
+              label Rule Type
+              select(ng-model="newRule.ruleType")
+                option(value="canView") Can View
+                option(value="canViewBusy") Can View Busy
+                option(value="canNotView") Cannot View
+              label User Group ID
               input(type="text", ng-model="userGroupId")
+              button.btn(ng-click="addUserGroupIdToRule()") Add User Group ID
+              ul
+                li(ng-repeat="userGroupId in newRule.userGroupIds") {{ userGroupId }}
+              label User ID
               input(type="text", ng-model="userId")
-              button.btn.btn-primary(ng-disabled="addRuleForm.$invalid", ng-click="addRule(ruleType, userGroupId, userId)") Add Rule
+              button.btn(ng-click="addUserIdToRule()") Add User ID
+              ul
+                li(ng-repeat="userId in newRule.userIds") {{ userId }}
+              button.btn.btn-primary(ng-disabled="addRuleForm.$invalid", ng-click="addRule()") Add Rule
             form(name="addModUserForm")
-              input(type="text", ng-model="inputModUserID", required)
-              button.btn.btn-primary(ng-disabled="addModUserForm.$invalid", ng-click="addModUser(inputModUserID)") Add User with Modify
+              input(type="text", ng-model="inputModUserId")
+              button.btn(ng-click="addModUsertoList()") Add User with Modify
+              ul
+                li(ng-repeat="modUserId in modUserList") {{ modUserId }}
+              button.btn.btn-primary(ng-disabled="addModUserForm.$invalid", ng-click="addModUser()") Add Users with Modify
 
           #calendarEvents(ng-show="selector == 4")
             ul(ng-repeat="(key, value) in localEvents | groupBy: 'calendarId'")
